# fraud-detection

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt
mlruns/1/models/m-237374624194462793eae4640809fa37/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-7f5deca8ec55475f8d5a7a3fd606c17a/artifacts/: MLmodel  model.pkl  python_env.yaml
mlruns/1/models/m-8f2eca03a9a84562904ac72467a00bec/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-a38b86223bb04670b298b91763a28d89/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/1/models/m-ed922db6951c4877844834006b578479/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-fcf4d6b5e4c54c7abbcc6e234a535599/artifacts/: MLmodel
notebooks/: 01_eda.ipynb  02_test_preprocessing.ipynb  09_threshold_tuning.ipynb  10_shap_explainability.ipynb
src/: config.py  make_submission.py  train_baseline.py  train_lgb.py  train_stacking.py  train_with_mlflow.py  train_xgb.py  train_xgb_tuned.py  tune_lgb_optuna.py  tune_xgb_optuna.py
src/fraud_detection.egg-info/: PKG-INFO  SOURCES.txt
src/preprocessing/: preprocessing.py
submissions/: stacking_submission.csv
