[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Fraud detection ML pipeline"
authors = [
    { name = "Abdur" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]